--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,16 @@
 version: '3'
 
 services:
+  project-api:
+    build:
+      context: .
+      dockerfile: app/Dockerfile
+    ports:
+      - "8000:8000"
+    environment:
+      DATABASE_URL: postgresql://postgresql:postgresql@db:5432/postgresql
+    depends_on:
+      - db
   db:
     image: postgres:latest
     restart: always
@@ -12,5 +22,6 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+      - ./init/init.sql:/docker-entrypoint-initdb.d/init.sql
 volumes:
   postgres_data:
